docs/api/qiskit/0.45/qiskit.providers.models.GateProperties.mdx
---
title: GateProperties
description: API reference for qiskit.providers.models.GateProperties
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.GateProperties
---

# GateProperties

<Class id="qiskit.providers.models.GateProperties" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.45/qiskit/providers/models/backendproperties.py" signature="qiskit.providers.models.GateProperties(qubits, gate, parameters, **kwargs)">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.12)")

  Class representing a gate’s properties

  ### qubits

  <Attribute id="qiskit.providers.models.GateProperties.qubits" name="qubits">
    qubits.
  </Attribute>

  ### gate

  <Attribute id="qiskit.providers.models.GateProperties.gate" name="gate">
    gate.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.providers.models.GateProperties.parameters" name="parameters">
    parameters.
  </Attribute>

  Initialize a new [`GateProperties`](#qiskit.providers.models.GateProperties "qiskit.providers.models.GateProperties") object

  **Parameters**

  *   **qubits** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.12)")) – A list of integers representing qubits
  *   **gate** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")) – The gates name
  *   **parameters** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.12)")) – List of [`Nduv`](qiskit.providers.models.Nduv "qiskit.providers.models.Nduv") objects for the name-date-unit-value for the gate
  *   **kwargs** – Optional additional fields

  ## Methods

  ### from\_dict

  <Function id="qiskit.providers.models.GateProperties.from_dict" name="from_dict" signature="classmethod from_dict(data)">
    Create a new Gate object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.12)")) – A dictionary representing the Gate to create. It will be in the same format as output by [`to_dict()`](#qiskit.providers.models.GateProperties.to_dict "qiskit.providers.models.GateProperties.to_dict").

    **Returns**

    The Nduv from the input dictionary.

    **Return type**

    [GateProperties](#qiskit.providers.models.GateProperties "qiskit.providers.models.GateProperties")
  </Function>

  ### to\_dict

  <Function id="qiskit.providers.models.GateProperties.to_dict" name="to_dict" signature="to_dict()">
    Return a dictionary format representation of the BackendStatus.

    **Returns**

    The dictionary form of the Gate.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.12)")
  </Function>
</Class>

