docs/api/qiskit/1.4/qiskit.providers.models.GateProperties.mdx
---
title: GateProperties (v1.4)
description: API reference for qiskit.providers.models.GateProperties in qiskit v1.4
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.GateProperties
---

# GateProperties

<Class id="qiskit.providers.models.GateProperties" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/providers/models/backendproperties.py#L98-L177" signature="qiskit.providers.models.GateProperties(qubits, gate, parameters, **kwargs)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.14)")

  Class representing a gate’s properties

  ### qubits

  <Attribute id="qiskit.providers.models.GateProperties.qubits">
    qubits.
  </Attribute>

  ### gate

  <Attribute id="qiskit.providers.models.GateProperties.gate">
    gate.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.providers.models.GateProperties.parameters">
    parameters.
  </Attribute>

  Initialize a new [`GateProperties`](#qiskit.providers.models.GateProperties "qiskit.providers.models.GateProperties") object

  <Admonition title="Deprecated since version 1.4" type="danger">
    The class `qiskit.providers.models.backendproperties.GateProperties` is deprecated as of qiskit 1.4. It will be removed in the 2.0 release. The models in `qiskit.providers.models` and related objects are part of the deprecated BackendV1 workflow, and no longer necessary for BackendV2. If a user workflow requires these representations it likely relies on deprecated functionality and should be updated to use BackendV2.
  </Admonition>

  **Parameters**

  *   **qubits** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.14)")) – A list of integers representing qubits
  *   **gate** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)")) – The gates name
  *   **parameters** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.14)")) – List of [`Nduv`](qiskit.providers.models.Nduv "qiskit.providers.models.Nduv") objects for the name-date-unit-value for the gate
  *   **kwargs** – Optional additional fields

  ## Methods

  ### from\_dict

  <Function id="qiskit.providers.models.GateProperties.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/providers/models/backendproperties.py#L140-L158" signature="from_dict(data)" modifiers="classmethod">
    Create a new Gate object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.14)")) – A dictionary representing the Gate to create. It will be in the same format as output by [`to_dict()`](#qiskit.providers.models.GateProperties.to_dict "qiskit.providers.models.GateProperties.to_dict").

    **Returns**

    The Nduv from the input dictionary.

    **Return type**

    [GateProperties](#qiskit.providers.models.GateProperties "qiskit.providers.models.GateProperties")
  </Function>

  ### to\_dict

  <Function id="qiskit.providers.models.GateProperties.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/providers/models/backendproperties.py#L160-L171" signature="to_dict()">
    Return a dictionary format representation of the BackendStatus.

    **Returns**

    The dictionary form of the Gate.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.14)")
  </Function>
</Class>

